Fix header spacing

--- a/app/assets/stylesheets/swop/swop-themes/swop-simple/swop-components/swop-filters.scss
+++ b/app/assets/stylesheets/swop/swop-themes/swop-simple/swop-components/swop-filters.scss
@@ -37,6 +37,7 @@
   margin-bottom: $spacer-1;
 
   & + .row {
+    width: unset !important;
 
     .input-group > .form-control + .btn-primary {
       @extend .btn-white;
@@ -61,10 +62,10 @@ form {
   .card {
     display: flex;
     flex-direction: column;
-    margin-bottom: $spacer-4 !important;
+    margin-bottom: $spacer-5 !important;
 
     @include media-breakpoint-up(md) {
-      margin-bottom: $spacer-5 !important;
+      margin-bottom: $spacer-6 !important;
     }
 
     @include media-breakpoint-up(lg) {
