--- a/app/assets/stylesheets/swop/swop-themes/swop-simple/swop-components/swop-navs.scss
+++ b/app/assets/stylesheets/swop/swop-themes/swop-simple/swop-components/swop-navs.scss
@@ -18,6 +18,7 @@
       &.dropdown {
         margin-left: auto;
         margin-right: 0;
+        margin-top: -$spacer-3;
 
         & + .nav-item.dropdown {
           margin-left: $spacer-3;
