--- a/app/assets/stylesheets/swop/swop-themes/swop-simple/swop-layouts/swop-header.scss
+++ b/app/assets/stylesheets/swop/swop-themes/swop-simple/swop-layouts/swop-header.scss
@@ -1,10 +1,10 @@
 header {
 
   h1 {
-    margin-bottom: $spacer-1 !important;
+    margin-bottom: $spacer-4 !important;
 
     @include media-breakpoint-up(md) {
-      margin-bottom: $spacer-2 !important;
+      margin-bottom: $spacer-5 !important;
     }
   }
 
